✨ feat(_Layout): Add liks
To the pages

--- a/RestoStock/Pages/Shared/_Layout.cshtml
+++ b/RestoStock/Pages/Shared/_Layout.cshtml
@@ -22,6 +22,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-black" asp-area="" asp-page="/Ingredientes/Index">Ingredientes</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-black" asp-area="" asp-page="/Pedidos/Index">Pedidos</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-black" asp-area="" asp-page="/Platos/Index">Platos</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-black" asp-area="" asp-page="/Provedores/Index">Provedores</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
