--- a/RestoStock/Pages/Ingredientes/Create.cshtml
+++ b/RestoStock/Pages/Ingredientes/Create.cshtml
@@ -1,4 +1,52 @@
 ﻿@page
 @model RestoStock.Pages.Ingredientes.CreateModel
 @{
+    ViewData["Title"] = "Create Ingrediente";
+}
+
+<h1>Create Ingrediente</h1>
+
+<h4>Ingredientes</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="Ingrediente.Nombre" class="control-label"></label>
+                <input asp-for="Ingrediente.Nombre" class="form-control" />
+                <span asp-validation-for="Ingrediente.Nombre" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Ingrediente.CantidadDisponible" class="control-label"></label>
+                <input asp-for="Ingrediente.CantidadDisponible" class="form-control" />
+                <span asp-validation-for="Ingrediente.CantidadDisponible" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Ingrediente.UnidadMedida" class="control-label"></label>
+                <input asp-for="Ingrediente.UnidadMedida" class="form-control" />
+                <span asp-validation-for="Ingrediente.UnidadMedida" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Ingrediente.PrecioUnitario" class="control-label"></label>
+                <input asp-for="Ingrediente.PrecioUnitario" class="form-control" />
+                <span asp-validation-for="Ingrediente.PrecioUnitario" class="text-danger"></span>
+            </div>
+
+            <div class="form-group mt-3">
+                <input type="submit" value="Create" class="btn btn-success" />
+                <a asp-page="Index" class="btn btn-primary">Back to List</a>
+            </div>
+        </form>
+    </div>
+</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
