--- a/RestoStock/Pages/Shared/_Layout.cshtml
+++ b/RestoStock/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RestoStock.styles.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEJzN7Yk6+V3N0g4MSzBwv0O3bAXxFjptvpmvfXy+Q+kJg6gyV7iw+bgfjZPp" crossorigin="anonymous">
 </head>
 <body>
     <header>
