--- a/RestoStock/Pages/Ingredientes/Edit.cshtml
+++ b/RestoStock/Pages/Ingredientes/Edit.cshtml
@@ -1,4 +1,42 @@
 ﻿@page
 @model RestoStock.Pages.Ingredientes.EditModel
 @{
+	ViewData["Title"] = "Editar Ingrediente";
+}
+<h2>Editar Ingrediente</h2>
+
+<form method="post">
+    <input type="hidden" asp-for="IngredienteForm.IdIngrediente" /> <!-- Campo oculto para el Id -->
+
+    <div class="form-group">
+        <label asp-for="IngredienteForm.Nombre" class="control-label"></label>
+        <input asp-for="IngredienteForm.Nombre" class="form-control" />
+        <span asp-validation-for="IngredienteForm.Nombre" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="IngredienteForm.CantidadDisponible" class="control-label"></label>
+        <input asp-for="IngredienteForm.CantidadDisponible" class="form-control" />
+        <span asp-validation-for="IngredienteForm.CantidadDisponible" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="IngredienteForm.UnidadMedida" class="control-label"></label>
+        <input asp-for="IngredienteForm.UnidadMedida" class="form-control" />
+        <span asp-validation-for="IngredienteForm.UnidadMedida" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="IngredienteForm.PrecioUnitario" class="control-label"></label>
+        <input asp-for="IngredienteForm.PrecioUnitario" class="form-control" step="0.01" />
+        <span asp-validation-for="IngredienteForm.PrecioUnitario" class="text-danger"></span>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <a asp-page="./Index" class="btn btn-secondary">Cancelar</a>
+    <div asp-validation-summary="All" class="text-danger"></div>
+</form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
 }
