--- a/RestoStock/wwwroot/css/site.css
+++ b/RestoStock/wwwroot/css/site.css
@@ -18,5 +18,65 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: white;
+    color: #f5f5f5;
+}
+
+.navbar {
+    background-color: #c8102e; 
+}
+
+.navbar-brand, .nav-link {
+    color: #fff !important;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    color: #000 !important;
+}
+
+.navbar-nav .nav-item {
+    margin-right: 20px; 
+}
+
+.navbar-nav .nav-link:hover {
+    color: #c8102e !important;
+    background-color: #f5f5f5; 
+    border-radius: 5px;
+}
+
+.navbar-nav .nav-item i {
+    color: #f5f5f5; 
+}
+
+.navbar-nav .nav-item:hover i {
+    color: #c8102e; 
+}
+
+footer {
+    background-color: #1a1a1a;
+    color: #f5f5f5;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.dropdown-item {
+    color: #1a1a1a;
+}
+
+    .dropdown-item:hover {
+        color: #fff;
+        background-color: #c8102e;
+    }
+
+.form-label {
+    color: #000;
+}
+
+::placeholder {
+    color: #000; 
+}
+
+.form-check-label {
+    color: #000; 
 }
