--- a/RestoStock/Pages/Platos/Index.cshtml
+++ b/RestoStock/Pages/Platos/Index.cshtml
@@ -1,4 +1,48 @@
 ﻿@page
-@model RestoStock.Pages.Ingredientes.IndexModel
+@model RestoStock.Pages.Platos.IndexModel
 @{
+	ViewData["Title"] = "Index Platos";
 }
+
+<h1>Index Platos</h1>
+
+<p>
+    <a asp-page="Create" class="btn btn-success">Create New</a>
+</p>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Platos[0].Nombre)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Platos[0].PrecioVenta)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Platos[0].Descripcion)
+            </th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Platos)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nombre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PrecioVenta)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descripcion)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.IdPlato" class="btn btn-warning">Edit</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.IdPlato" class="btn btn-danger">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
