--- a/RestoStock/Pages/Platos/Create.cshtml
+++ b/RestoStock/Pages/Platos/Create.cshtml
@@ -1,4 +1,46 @@
 ﻿@page
-@model RestoStock.Pages.Ingredientes.CreateModel
+@model RestoStock.Pages.Platos.CreateModel
 @{
+    ViewData["Title"] = "Create Plato";
+}
+
+<h1>Create Plato</h1>
+
+<h4>Platos</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="Plato.Nombre" class="control-label"></label>
+                <input asp-for="Plato.Nombre" class="form-control" />
+                <span asp-validation-for="Plato.Nombre" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Plato.PrecioVenta" class="control-label"></label>
+                <input asp-for="Plato.PrecioVenta" class="form-control" />
+                <span asp-validation-for="Plato.PrecioVenta" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Plato.Descripcion" class="control-label"></label>
+                <input asp-for="Plato.Descripcion" class="form-control" />
+                <span asp-validation-for="Plato.Descripcion" class="text-danger"></span>
+            </div>
+
+            <div class="form-group mt-3">
+                <input type="submit" value="Create" class="btn btn-success" />
+                <a asp-page="Index" class="btn btn-primary">Back to List</a>
+            </div>
+        </form>
+    </div>
+</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
