🐞 fix(Style): Change Icon Platos

--- a/RestoStock/Pages/Shared/_Layout.cshtml
+++ b/RestoStock/Pages/Shared/_Layout.cshtml
@@ -53,15 +53,21 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" asp-area="" asp-page="/Platos/Index">
-                                        <i class="bi bi-knife-fork me-1"></i> Platos
-                                    </a>
+                                        <a class="dropdown-item" asp-area="" asp-page="/Platos/Index">
+                                            <i class="bi bi-egg-fried me-1"></i> Platos
+                                        </a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" asp-area="" asp-page="/Provedores/Index">
                                         <i class="bi bi-truck me-1"></i> Provedores
                                     </a>
                                 </li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li>
+                                        <partial name="_LoginStatusPartial" />
+                                    </li>
                             </ul>
                         </li>
                     </ul>
