--- a/RestoStock/Pages/Shared/_Layout.cshtml
+++ b/RestoStock/Pages/Shared/_Layout.cshtml
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="~/RestoStock.styles.css" asp-append-version="true" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEJzN7Yk6+V3N0g4MSzBwv0O3bAXxFjptvpmvfXy+Q+kJg6gyV7iw+bgfjZPp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
- 
+    @RenderSection("Styles", required: false)
 </head>
+
 <body>
     @if (User.Identity.IsAuthenticated)
     {
@@ -55,6 +56,11 @@
                                 <li>
                                         <a class="dropdown-item" asp-area="" asp-page="/Platos/Index">
                                             <i class="bi bi-egg-fried me-1"></i> Platos
+                                        </a>
+                                </li>
+                                <li>
+                                        <a class="dropdown-item" asp-area="" asp-page="/DetallesPlatos/Index">
+                                            <i class="bi bi-egg-fried me-1"></i> Detalles Platos
                                         </a>
                                 </li>
                                 <li>
