--- a/RestoStock/Pages/DetallesPlatos/Index.cshtml
+++ b/RestoStock/Pages/DetallesPlatos/Index.cshtml
@@ -26,8 +26,8 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">@Html.DisplayNameFor(model => model.DetallesPlatos[0].Cantidad)</th>
-                <th scope="col">@Html.DisplayNameFor(model => model.DetallesPlatos[0].Ingredientes.Nombre)</th>
-                <th scope="col">@Html.DisplayNameFor(model => model.DetallesPlatos[0].Platos.Nombre)</th>
+                <th scope="col">@Html.DisplayNameFor(model => model.DetallesPlatos[0].Ingrediente.Nombre)</th>
+                <th scope="col">@Html.DisplayNameFor(model => model.DetallesPlatos[0].Plato.Nombre)</th>
                 <th scope="col" class="text-center">Acciones</th>
             </tr>
         </thead>
@@ -38,8 +38,8 @@
                 <tr>
                     <th scope="row" class="fw-bold text-danger text-center">@((i + 1))</th>
                     <td>@Html.DisplayFor(modelItem => item.Cantidad)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Ingredientes.Nombre)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Platos.Nombre)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Ingrediente.Nombre)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Plato.Nombre)</td>
                     <td class="text-center">
                         <a asp-page="./Editar" asp-route-id="@item.IdDetalle" class="btn btn-outline-danger btn-sm me-2">
                             <i class="bi bi-pencil me-1"></i> Editar
