--- a/RestoStock/Pages/DetallesPlatos/Index.cshtml
+++ b/RestoStock/Pages/DetallesPlatos/Index.cshtml
@@ -41,7 +41,7 @@
                     <td>@Html.DisplayFor(modelItem => item.Ingrediente.Nombre)</td>
                     <td>@Html.DisplayFor(modelItem => item.Plato.Nombre)</td>
                     <td class="text-center">
-                        <a asp-page="./Editar" asp-route-id="@item.IdDetalle" class="btn btn-outline-danger btn-sm me-2">
+                        <a asp-page="./Edit" asp-route-id="@item.IdDetalle" class="btn btn-outline-danger btn-sm me-2">
                             <i class="bi bi-pencil me-1"></i> Editar
                         </a>
                         <a asp-page="./Delete" asp-route-id="@item.IdDetalle" class="btn btn-outline-dark btn-sm">
