--- a/RestoStock/Pages/Pedidos/Index.cshtml
+++ b/RestoStock/Pages/Pedidos/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index Pedidos</h1>
 
 <p>
-    <a asp-page="Create" class="btn btn-success">Agregar Nuevo Pedido</a>
+    <a asp-page="/Pedidos/Create" class="btn btn-success">Agregar Nuevo Pedido</a>
 </p>
 
 <table class="table">
