--- a/RestoStock/Pages/Provedores/Create.cshtml
+++ b/RestoStock/Pages/Provedores/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RestoStock.Pages.Pedidos.CreateModel
+@model RestoStock.Pages.Provedores.CreateModel
 @{
     ViewData["Title"] = "Crear Pedido";
     var proveedores = ViewData["Proveedores"] as List<RestoStock.Models.Proveedor>;
@@ -10,38 +10,40 @@
     }
 }
 
-<h1>Crear Pedido</h1>
+<h1>Crear Provedores</h1>
 
 <form method="post">
     <div class="form-group">
-        <label asp-for="Pedido.FechaPedido" class="control-label">Fecha del Pedido</label>
-        <input asp-for="Pedido.FechaPedido" class="form-control" />
-        <span asp-validation-for="Pedido.FechaPedido" class="text-danger"></span>
+        <label asp-for="Proveedor.NombreEmpresa" class="control-label">Nombre Empresa</label>
+        <input asp-for="Proveedor.NombreEmpresa" class="form-control" />
+        <span asp-validation-for="Proveedor.NombreEmpresa" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Pedido.Total" class="control-label">Total</label>
-        <input asp-for="Pedido.Total" class="form-control" />
-        <span asp-validation-for="Pedido.Total" class="text-danger"></span>
+        <label asp-for="Proveedor.Contacto" class="control-label">Contacto</label>
+        <input asp-for="Proveedor.Contacto" class="form-control" />
+        <span asp-validation-for="Proveedor.Contacto" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Pedido.FkProveedor" class="control-label">Proveedor</label>
-        <select asp-for="Pedido.FkProveedor" class="form-control">
-            <option value="">Seleccione un proveedor</option>
-            @if (proveedores != null)
-            {
-                foreach (var proveedor in proveedores)
-                {
-                    <option value="@proveedor.IdProveedor">@proveedor.NombreEmpresa</option>
-                }
-            }
-        </select>
-        <span asp-validation-for="Pedido.FkProveedor" class="text-danger"></span>
+        <label asp-for="Proveedor.Telefono" class="control-label">Telefono</label>
+        <input asp-for="Proveedor.Telefono" class="form-control" />
+        <span asp-validation-for="Proveedor.Telefono" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        <label asp-for="Proveedor.Email" class="control-label">Email</label>
+        <input asp-for="Proveedor.Email" class="form-control" />
+        <span asp-validation-for="Proveedor.Email" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Proveedor.Direccion" class="control-label">Direccion</label>
+        <input asp-for="Proveedor.Direccion" class="form-control" />
+        <span asp-validation-for="Proveedor.Direccion" class="text-danger"></span>
+    </div>
+    
 
     <div class="form-group">
-        <input type="submit" value="Crear Pedido" class="btn btn-success" />
+        <input type="submit" value="Crear Proveedor" class="btn btn-success" />
         <a asp-page="Index" class="btn btn-primary">Volver a la Lista</a>
     </div>
 </form>
