🐞 fix(Pedidos): Changes

--- a/RestoStock/Pages/Pedidos/Delete.cshtml
+++ b/RestoStock/Pages/Pedidos/Delete.cshtml
@@ -1,4 +1,47 @@
 ﻿@page
-@model RestoStock.Pages.Ingredientes.DeleteModel
+@model RestoStock.Pages.Pedidos.DeleteModel
 @{
+    ViewData["Title"] = "Eliminar Pedido";
 }
+<h1>Eliminar Pedido</h1>
+
+<h3>¿Está seguro de que desea eliminar este pedido?</h3>
+<div>
+    <h4>Pedido</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Pedido.FechaPedido)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Pedido.FechaPedido)
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Pedido.Total)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Pedido.Total)
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Pedido.FkProveedor)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Pedido.FkProveedor)
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Pedido.Proveedor.NombreEmpresa)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Pedido.Proveedor.NombreEmpresa)
+        </dd>
+    </dl>
+
+    <form method="post">
+        <input type="hidden" asp-for="Pedido.IdPedido" />
+        <input type="submit" value="Eliminar" class="btn btn-danger" />
+        <a asp-page="./Index" class="btn btn-primary">Volver a la lista</a>
+    </form>
+</div>
