--- a/RestoStock/Pages/Pedidos/Edit.cshtml
+++ b/RestoStock/Pages/Pedidos/Edit.cshtml
@@ -1,4 +1,41 @@
 ﻿@page
-@model RestoStock.Pages.Ingredientes.EditModel
+@model RestoStock.Pages.Pedidos.EditModel
 @{
+    ViewData["Title"] = "Editar Pedido";
+}
+<h2>Editar Pedido</h2>
+
+<form method="post">
+    <input type="hidden" asp-for="Pedido.IdPedido" /> <!-- Campo oculto para el Id del Pedido -->
+
+    <div class="form-group">
+        <label asp-for="Pedido.FechaPedido" class="control-label"></label>
+        <input asp-for="Pedido.FechaPedido" class="form-control" />
+        <span asp-validation-for="Pedido.FechaPedido" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Pedido.Total" class="control-label"></label>
+        <input asp-for="Pedido.Total" class="form-control" type="number" />
+        <span asp-validation-for="Pedido.Total" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Pedido.FkProveedor" class="control-label"></label>
+        <select asp-for="Pedido.FkProveedor" class="form-control" asp-items="Model.Proveedores"></select>
+        <span asp-validation-for="Pedido.FkProveedor" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Pedido.Proveedor.NombreEmpresa" class="control-label"></label>
+        <input asp-for="Pedido.Proveedor.NombreEmpresa" class="form-control" readonly />
+        <span asp-validation-for="Pedido.Proveedor.NombreEmpresa" class="text-danger"></span>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <a asp-page="./Index" class="btn btn-secondary">Cancelar</a>
+</form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
 }
